--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.115
+head: 1.116
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 115;	selected revisions: 115
+total revisions: 116;	selected revisions: 116
 description:
+----------------------------
+revision 1.116
+date: 2005/01/16 01:50:23;  author: gilles;  state: Exp;  lines: +50 -49
+Added --regexmess option
 ----------------------------
 revision 1.115
 date: 2005/01/10 00:14:45;  author: gilles;  state: Exp;  lines: +10 -12
