--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.110
+head: 1.111
 branch:
 locks: strict
-	gilles: 1.110
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 110;	selected revisions: 110
+total revisions: 111;	selected revisions: 111
 description:
 ----------------------------
-revision 1.110	locked by: gilles;
+revision 1.111
+date: 2005/01/04 04:05:07;  author: gilles;  state: Exp;  lines: +9 -13
+Suppressed perl warnings
+----------------------------
+revision 1.110
 date: 2005/01/04 03:56:59;  author: gilles;  state: Exp;  lines: +92 -12
 Better performances
 ----------------------------
