--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.110 $
+    $Revision: 1.111 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -239,5 +239,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.110 2005/01/04 03:56:59 gilles Exp gilles $
+    $Id: imapsync,v 1.111 2005/01/04 04:05:07 gilles Exp $
 
