--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.112
+head: 1.115
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 112;	selected revisions: 112
+total revisions: 115;	selected revisions: 115
 description:
+----------------------------
+revision 1.115
+date: 2005/01/10 00:14:45;  author: gilles;  state: Exp;  lines: +10 -12
+Tried to get flags in one command, but it is too slow.
+----------------------------
+revision 1.114
+date: 2005/01/07 09:58:59;  author: gilles;  state: Exp;  lines: +82 -76
+moved parse_header_msg1
+----------------------------
+revision 1.113
+date: 2005/01/07 07:28:40;  author: gilles;  state: Exp;  lines: +9 -9
+Added conditional --dry actions
 ----------------------------
 revision 1.112
 date: 2005/01/04 04:49:43;  author: gilles;  state: Exp;  lines: +19 -18
