--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.120
+head: 1.121
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 120;	selected revisions: 120
+total revisions: 121;	selected revisions: 121
 description:
+----------------------------
+revision 1.121
+date: 2005/02/01 04:03:30;  author: gilles;  state: Exp;  lines: +7 -5
+Added links imapcopy and migrationtool
 ----------------------------
 revision 1.120
 date: 2005/02/01 02:38:38;  author: gilles;  state: Exp;  lines: +7 -6
