--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.120 $
+    $Revision: 1.121 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -231,6 +231,8 @@ SIMILAR SOFTWARES
       imaprepl    : http://www.bl0rg.net/software/
                     http://freshmeat.net/projects/imap-repl/
       imap_migrate: http://freshmeat.net/projects/imapmigration/
+      imapcopy    : http://home.arcor.de/armin.diehl/imapcopy/imapcopy.html
+      migrationtool http://sourceforge.net/projects/migrationtool/
       pop2imap    : http://www.linux-france.org/prj/pop2imap/
 
     Feedback (good or bad) will be always welcome.
@@ -240,5 +242,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.120 2005/02/01 02:38:38 gilles Exp $
+    $Id: imapsync,v 1.121 2005/02/01 04:03:30 gilles Exp $
 
