--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.116
+head: 1.118
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 116;	selected revisions: 116
+total revisions: 118;	selected revisions: 118
 description:
+----------------------------
+revision 1.118
+date: 2005/01/17 14:45:25;  author: gilles;  state: Exp;  lines: +10 -8
+--regexmess option can be repeated
+----------------------------
+revision 1.117
+date: 2005/01/16 13:51:49;  author: gilles;  state: Exp;  lines: +17 -11
+Changed get_separator()
+Calling namespace capability if needed
 ----------------------------
 revision 1.116
 date: 2005/01/16 01:50:23;  author: gilles;  state: Exp;  lines: +50 -49
