--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,24 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.118
+head: 1.120
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 118;	selected revisions: 118
+total revisions: 120;	selected revisions: 120
 description:
+----------------------------
+revision 1.120
+date: 2005/02/01 02:38:38;  author: gilles;  state: Exp;  lines: +7 -6
+Success stories : MDaemon
+----------------------------
+revision 1.119
+date: 2005/02/01 01:54:08;  author: gilles;  state: Exp;  lines: +13 -8
+Fixed undef flag array problem (that I've never encounter).
+Don't remenber who gave the patch
+patches/imapsync-undef_arrayref.diff
 ----------------------------
 revision 1.118
 date: 2005/01/17 14:45:25;  author: gilles;  state: Exp;  lines: +10 -8
