--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.118 $
+    $Revision: 1.120 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -163,7 +163,7 @@ IMAP SERVERS
 
      - BincImap 1.2.3
      - CommunicatePro server (Redhat 8.0)
-     - Courier IMAP 1.5.1, 2.2.0, 2.1.1
+     - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1
      - Critical Path (7.0.020)
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.2.1, Cyrus 2.2.2-BETA.
      - DBMail 1.2.1
@@ -171,6 +171,7 @@ IMAP SERVERS
      - Domino (Notes) 6.5, 5.0.6
      - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003), 8.12
+     - MDaemon 7.0.1
      - MS Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - OpenWave
@@ -239,5 +240,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.118 2005/01/17 14:45:25 gilles Exp $
+    $Id: imapsync,v 1.120 2005/02/01 02:38:38 gilles Exp $
 
