--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.124
+head: 1.125
 branch:
 locks: strict
-	gilles: 1.124
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 124;	selected revisions: 124
+total revisions: 125;	selected revisions: 125
 description:
 ----------------------------
-revision 1.124	locked by: gilles;
+revision 1.125
+date: 2005/04/22 01:12:18;  author: gilles;  state: Exp;  lines: +23 -9
+Allow password input on command line
+if none by options --password nor --passfile
+Thanks to Brian Cunnie for his patch.
+----------------------------
+revision 1.124
 date: 2005/04/13 11:37:38;  author: gilles;  state: Exp;  lines: +9 -7
 Added Samsung Contact success
 ----------------------------
