--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.124 $
+    $Revision: 1.125 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -246,5 +246,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.124 2005/04/13 11:37:38 gilles Exp gilles $
+    $Id: imapsync,v 1.125 2005/04/22 01:12:18 gilles Exp $
 
