--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.123
+head: 1.124
 branch:
 locks: strict
+	gilles: 1.124
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 123;	selected revisions: 123
+total revisions: 124;	selected revisions: 124
 description:
+----------------------------
+revision 1.124	locked by: gilles;
+date: 2005/04/13 11:37:38;  author: gilles;  state: Exp;  lines: +9 -7
+Added Samsung Contact success
 ----------------------------
 revision 1.123
 date: 2005/03/19 04:25:46;  author: gilles;  state: Exp;  lines: +17 -6
