--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.123 $
+    $Revision: 1.124 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -159,7 +159,8 @@ BUGS
     Report any bugs to the author: lamiral@linux-france.org
 
 IMAP SERVERS
-    Success stories reported (softwares in alphabetic order) :
+    Success stories reported with the following imap servers (softwares
+    inames are in alphabetic order) :
 
      - BincImap 1.2.3
      - CommunicatePro server (Redhat 8.0)
@@ -169,7 +170,7 @@ IMAP SERVERS
        2.2.1, 2.2.2-BETA, 2.2.10
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
-     - Domino (Notes) 6.5, 5.0.6
+     - Domino (Notes) 6.5, 5.0.6, 5.0.7
      - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MDaemon 7.0.1
@@ -178,6 +179,7 @@ IMAP SERVERS
      - Netscape Messaging Server 4.15 Patch 7
      - OpenWave
      - Qualcomm Worldmail (NT)
+     - Samsung Contact IMAP server 8.5.0
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh)
@@ -244,5 +246,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.123 2005/03/19 04:25:46 gilles Exp $
+    $Id: imapsync,v 1.124 2005/04/13 11:37:38 gilles Exp gilles $
 
