--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.121
+head: 1.123
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 121;	selected revisions: 121
+total revisions: 123;	selected revisions: 123
 description:
+----------------------------
+revision 1.123
+date: 2005/03/19 04:25:46;  author: gilles;  state: Exp;  lines: +17 -6
+Added check about flags undef
+Bug reported from Novell NetMail by Dan Wang
+----------------------------
+revision 1.122
+date: 2005/03/19 04:11:33;  author: gilles;  state: Exp;  lines: +8 -6
+Updated Success stories
 ----------------------------
 revision 1.121
 date: 2005/02/01 04:03:30;  author: gilles;  state: Exp;  lines: +7 -5
