--- a/TODO
+++ b/TODO
@@ -1,6 +1,19 @@
 TODO file for imapsync
 ----------------------
 
+Read:
+http://www.washington.edu/imap/documentation/commndmt.txt.html
+
+Talk about :
+"I think notes is right but MS Eudora is bad with dates.
+(netscape or thunderbird is ok with dates)
+use the option --syncinternaldates "
+
+
+Add usage about --regextrans2
+To remove INBOX. in the name of destination folders :
+--regextrans2 's/^INBOX\.(.+)/$1/'
+
 Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
