--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.121 $
+    $Revision: 1.123 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -165,7 +165,8 @@ IMAP SERVERS
      - CommunicatePro server (Redhat 8.0)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1
      - Critical Path (7.0.020)
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.2.1, Cyrus 2.2.2-BETA.
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16,
+       2.2.1, 2.2.2-BETA, 2.2.10
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
      - Domino (Notes) 6.5, 5.0.6
@@ -174,6 +175,7 @@ IMAP SERVERS
      - MDaemon 7.0.1
      - MS Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
+     - Netscape Messaging Server 4.15 Patch 7
      - OpenWave
      - Qualcomm Worldmail (NT)
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
@@ -242,5 +244,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.121 2005/02/01 04:03:30 gilles Exp $
+    $Id: imapsync,v 1.123 2005/03/19 04:25:46 gilles Exp $
 
