--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.125
+head: 1.127
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 125;	selected revisions: 125
+total revisions: 127;	selected revisions: 127
 description:
+----------------------------
+revision 1.127
+date: 2005/05/09 04:14:48;  author: gilles;  state: Exp;  lines: +6 -7
+Fixed bug about @regexmess who was applied for the first
+message only. Thanks to Scott Glenn.
+----------------------------
+revision 1.126
+date: 2005/05/09 04:04:20;  author: gilles;  state: Exp;  lines: +26 -21
+Applied patch from Dag-Erling Smørgrav about acl sync pb
 ----------------------------
 revision 1.125
 date: 2005/04/22 01:12:18;  author: gilles;  state: Exp;  lines: +23 -9
