--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.127
+head: 1.128
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 127;	selected revisions: 127
+total revisions: 128;	selected revisions: 128
 description:
+----------------------------
+revision 1.128
+date: 2005/05/18 18:52:09;  author: gilles;  state: Exp;  lines: +7 -6
+Groupwise
 ----------------------------
 revision 1.127
 date: 2005/05/09 04:14:48;  author: gilles;  state: Exp;  lines: +6 -7
