--- a/FAQ
+++ b/FAQ
@@ -27,3 +27,44 @@ R. Use
    good then remove the --dry option.
 
 
+Q. Migrating from Groupwise to Cyrus
+
+R. By Jamie Neil:
+
+I eventually managed to get the mail to migrate without errors using the 
+following options:
+
+--sep1 /
+  - doesn't report separator so has to be set explicitly.
+
+--nosyncacls
+  - doesn't support ACLs.
+
+--skipheader '^Content-Type'
+  - MIME separator IDs seem to change every time a mail is accessed so 
+this is required to stop duplicates.
+
+--maxage 3650
+  - some messages just don't seem to want to transfer and produce the 
+perl errors I mentioned before. This prevents the errors, but the bad 
+messages don't transfer.
+
+Even though the mail migrated OK, there are a couple of gotchas with 
+Groupwise IMAP:
+
+1) Some of the GW folders are not real folders and are not available to 
+IMAP, the main problem one being "Sent Items". I could find no way of 
+coping the contents of these folders. The nearest I got was to create a 
+"real" folder and copy/move the sent items into it, but imapsync still 
+didn't see the messages (I think because there is something funny about 
+the reported dates/sizes).
+It think this problem has been rectified in GW6.5.
+
+2) The "skipheader '^Content-Type'" directive is required to stop 
+duplicate messages being created. GW seems to generate this field on the 
+fly for messages that have MIME separators and so it's different every time.
+
+3) Version 6.0.1 of the Groupwise Internet Connector sucks. I was 
+getting server abends when I pushed it a bit hard! I eventually had to 
+upgrade to 6.0.4 which seems to be a lot more stable.
+
