--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.127 $
+    $Revision: 1.128 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -166,11 +166,12 @@ IMAP SERVERS
      - CommunicatePro server (Redhat 8.0)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1
      - Critical Path (7.0.020)
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16,
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18
        2.2.1, 2.2.2-BETA, 2.2.10
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
+     - Groupwise IMAP (Novell). Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MDaemon 7.0.1
@@ -246,5 +247,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.127 2005/05/09 04:14:48 gilles Exp $
+    $Id: imapsync,v 1.128 2005/05/18 18:52:09 gilles Exp $
 
