--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.129
+head: 1.132
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 129;	selected revisions: 129
+total revisions: 132;	selected revisions: 132
 description:
+----------------------------
+revision 1.132
+date: 2005/05/20 03:18:48;  author: gilles;  state: Exp;  lines: +23 -16
+Updated doc with all options.
+----------------------------
+revision 1.131
+date: 2005/05/20 02:47:56;  author: gilles;  state: Exp;  lines: +5 -37
+Removed unused code
+----------------------------
+revision 1.130
+date: 2005/05/20 02:40:26;  author: gilles;  state: Exp;  lines: +23 -15
+Added --useheader option
 ----------------------------
 revision 1.129
 date: 2005/05/19 01:54:31;  author: gilles;  state: Exp;  lines: +14 -11
