--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
 TODO file for imapsync
 ----------------------
 
-Look at http://barnson.org/node/81
 
-Update doc with ALL options.
+Interface with external software like procmail 
+
+Look at http://barnson.org/node/81
 
 Add in doc:
 > The problem seems to be that one of the imap servers (the destination
@@ -48,13 +49,16 @@ Look at http://freshmeat.net/projects/freshmeat-submit/
 Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
 
 
-Think about speed.
 
 Explain expunge behavior
 
 Add a --recurse option when --folder option is used.
 
 Add --prefix1 option. Don't know what is the need exactly.
+
+DONE. Update doc with ALL options.
+
+DONE. Think about speed.
 
 DONE. Pb if "to separator" is in "from folder" name.
 Have to choose a caracter != to separator and
