--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.129 $
+    $Revision: 1.132 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -29,25 +29,31 @@ SYNOPSIS
       imapsync
 
       imapsync [--host1 server1]  [--port1 <num>]
-               [--user1 <string>] [--passfile1 <string>] 
+               [--user1 <string>] [--passfile1 <string>]
                [--host2 server2]  [--port2 <num>]
-               [--user2 <string>] [--passfile2 <string>] 
+               [--user2 <string>] [--passfile2 <string>]
+               [--noauthmd5]
                [--folder <string> --folder <string> ...]
                [--include <regex>] [--exclude <regex>]
-               [--prefix2 <string>]
+               [--prefix2 <string>] [--regextrans2 <regex>]
                [--sep1 <char>]
                [--sep2 <char>]
+               [--justfolders] [--justconnect]
                [--syncinternaldates]
+               [--buffersize  <int>]
+               [--syncacls]
+               [--regexmess <regex>] [--regexmess <regex>] 
                [--maxsize <int>]
                [--maxage <int>]
                [--skipheader <regex>]
+               [--useheader <string>] [--useheader <string>]
                [--skipsize]
                [--delete] [--expunge]
                [--subscribed] [--subscribe]
-               [--foldersizes]
+               [--nofoldersizes]
                [--dry]
                [--debug] [--debugimap]
-               [--timeout <int>]
+               [--timeout <int>] [--fast]
                [--version] [--help]
   
 DESCRIPTION
@@ -247,5 +253,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.129 2005/05/19 01:54:31 gilles Exp $
+    $Id: imapsync,v 1.132 2005/05/20 03:18:48 gilles Exp $
 
