--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.128
+head: 1.129
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 128;	selected revisions: 128
+total revisions: 129;	selected revisions: 129
 description:
+----------------------------
+revision 1.129
+date: 2005/05/19 01:54:31;  author: gilles;  state: Exp;  lines: +14 -11
+Added --buffersize option.
+No sync acls by default now.
 ----------------------------
 revision 1.128
 date: 2005/05/18 18:52:09;  author: gilles;  state: Exp;  lines: +7 -6
