--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.135
+head: 1.136
 branch:
 locks: strict
+	gilles: 1.136
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 135;	selected revisions: 135
+total revisions: 136;	selected revisions: 136
 description:
+----------------------------
+revision 1.136	locked by: gilles;
+date: 2005/06/23 02:24:19;  author: gilles;  state: Exp;  lines: +42 -29
+Fixed --maxsize --skipsize bug
 ----------------------------
 revision 1.135
 date: 2005/06/21 01:29:44;  author: gilles;  state: Exp;  lines: +25 -33
