--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.135 $
+    $Revision: 1.136 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -220,8 +220,9 @@ HUGE MIGRATION
 
     And the shell program is just :
 
-    { while IFS=';' read u1 p1 u2 p2; do imapsync --user1 $u1 --password1
-    $p1 --user2 $u2 --password2 $p2 ... done ; } < file.csv
+     { while IFS=';' read  u1 p1 u2 p2; do 
+            imapsync --user1 "$u1" --password1 "$p1" --user2 "$u2" --password2 "$p2" ...
+     done ; } < file.csv
 
     Welcome in shell programming !
 
@@ -253,5 +254,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.135 2005/06/21 01:29:44 gilles Exp $
+    $Id: imapsync,v 1.136 2005/06/23 02:24:19 gilles Exp gilles $
 
