--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@ TODO file for imapsync
 ----------------------
 
 
+Add debian packaging in the Makefile.
+Write to the debian maintener about that.
+
 Interface with external software like procmail 
 
 Look at http://barnson.org/node/81
