--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.132
+head: 1.133
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 132;	selected revisions: 132
+total revisions: 133;	selected revisions: 133
 description:
+----------------------------
+revision 1.133
+date: 2005/05/21 02:33:29;  author: gilles;  state: Exp;  lines: +45 -31
+Added foldersizes function
 ----------------------------
 revision 1.132
 date: 2005/05/20 03:18:48;  author: gilles;  state: Exp;  lines: +23 -16
