--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.132 $
+    $Revision: 1.133 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -166,7 +166,7 @@ BUGS
 
 IMAP SERVERS
     Success stories reported with the following imap servers (softwares
-    inames are in alphabetic order) :
+    names are in alphabetic order) :
 
      - BincImap 1.2.3
      - CommunicatePro server (Redhat 8.0)
@@ -207,7 +207,7 @@ IMAP SERVERS
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
-    --expunge --maxage --maxsize
+    --expunge --maxage --maxsize --useheader
 
     If you have many mailboxes to migrate think about a little shell
     program. Write a file called file.csv (for example) containing users and
@@ -253,5 +253,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.132 2005/05/20 03:18:48 gilles Exp $
+    $Id: imapsync,v 1.133 2005/05/21 02:33:29 gilles Exp $
 
