--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.133
+head: 1.135
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 133;	selected revisions: 133
+total revisions: 135;	selected revisions: 135
 description:
+----------------------------
+revision 1.135
+date: 2005/06/21 01:29:44;  author: gilles;  state: Exp;  lines: +25 -33
+Removed md5 test on perl lib
+----------------------------
+revision 1.134
+date: 2005/06/03 10:33:11;  author: gilles;  state: Exp;  lines: +8 -8
+updated documentation.
 ----------------------------
 revision 1.133
 date: 2005/05/21 02:33:29;  author: gilles;  state: Exp;  lines: +45 -31
