--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.133 $
+    $Revision: 1.135 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -175,7 +175,7 @@ IMAP SERVERS
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18
        2.2.1, 2.2.2-BETA, 2.2.10
      - DBMail 1.2.1
-     - Dovecot 0.99.10.4
+     - Dovecot 0.99.10.4  0.99.14
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
      - Groupwise IMAP (Novell). Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1
@@ -253,5 +253,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.133 2005/05/21 02:33:29 gilles Exp $
+    $Id: imapsync,v 1.135 2005/06/21 01:29:44 gilles Exp $
 
