--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,24 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.137
+head: 1.139
 branch:
 locks: strict
+	gilles: 1.139
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 137;	selected revisions: 137
+total revisions: 139;	selected revisions: 139
 description:
+----------------------------
+revision 1.139	locked by: gilles;
+date: 2005/07/16 12:46:22;  author: gilles;  state: Exp;  lines: +6 -6
+server list
+----------------------------
+revision 1.138
+date: 2005/07/16 11:12:45;  author: gilles;  state: Exp;  lines: +20 -13
+Added failure story.
+Added license information and url in imap server list.
 ----------------------------
 revision 1.137
 date: 2005/06/26 03:08:35;  author: gilles;  state: Exp;  lines: +22 -11
