--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.137 $
+    $Revision: 1.139 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -165,17 +165,23 @@ BUGS
     Report any bugs to the author: lamiral@linux-france.org
 
 IMAP SERVERS
+    Failure story reported with the following imap server :
+
+    - MailEnable 1.54 (Proprietary) http://www.mailenable.com/
+
     Success stories reported with the following imap servers (softwares
     names are in alphabetic order) :
 
-     - BincImap 1.2.3
+     - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
      - CommunicatePro server (Redhat 8.0)
-     - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1
+     - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1 (GPL) 
+       (http://www.courier-mta.org/)
      - Critical Path (7.0.020)
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18
-       2.2.1, 2.2.2-BETA, 2.2.10
-     - DBMail 1.2.1
-     - Dovecot 0.99.10.4  0.99.14
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
+       2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved)
+       (http://asg.web.cmu.edu/cyrus/)
+     - DBMail 1.2.1 (GPL) (http://www.dbmail.org/)
+     - Dovecot 0.99.10.4  0.99.14 (LGPL) (http://www.dovecot.org/)
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
      - Groupwise IMAP (Novell). Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1
@@ -189,7 +195,8 @@ IMAP SERVERS
      - Samsung Contact IMAP server 8.5.0
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
-       (RedHat uses UW like 2003.338rh)
+       (RedHat uses UW like 2003.338rh) (OSI Approved) 
+       (http://www.washington.edu/imap/)
      - UW - QMail v2.1
 
     Please report to the author any success or bad story with imapsync and
@@ -254,5 +261,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.137 2005/06/26 03:08:35 gilles Exp $
+    $Id: imapsync,v 1.139 2005/07/16 12:46:22 gilles Exp gilles $
 
