--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.136
+head: 1.137
 branch:
 locks: strict
-	gilles: 1.136
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 136;	selected revisions: 136
+total revisions: 137;	selected revisions: 137
 description:
 ----------------------------
-revision 1.136	locked by: gilles;
+revision 1.137
+date: 2005/06/26 03:08:35;  author: gilles;  state: Exp;  lines: +22 -11
+Added --fastio1 --fastio2 options.
+Fixed bad variable declaration with --maxage.
+----------------------------
+revision 1.136
 date: 2005/06/23 02:24:19;  author: gilles;  state: Exp;  lines: +42 -29
 Fixed --maxsize --skipsize bug
 ----------------------------
