--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.136 $
+    $Revision: 1.137 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -254,5 +254,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.136 2005/06/23 02:24:19 gilles Exp gilles $
+    $Id: imapsync,v 1.137 2005/06/26 03:08:35 gilles Exp $
 
