--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.139
+head: 1.140
 branch:
 locks: strict
-	gilles: 1.139
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 139;	selected revisions: 139
+total revisions: 140;	selected revisions: 140
 description:
 ----------------------------
-revision 1.139	locked by: gilles;
+revision 1.140
+date: 2005/10/30 10:16:52;  author: gilles;  state: Exp;  lines: +21 -8
+Added --expunge1 --expunge2 options
+----------------------------
+revision 1.139
 date: 2005/07/16 12:46:22;  author: gilles;  state: Exp;  lines: +6 -6
 server list
 ----------------------------
