--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.139 $
+    $Revision: 1.140 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -48,7 +48,7 @@ SYNOPSIS
                [--skipheader <regex>]
                [--useheader <string>] [--useheader <string>]
                [--skipsize]
-               [--delete] [--expunge]
+               [--delete] [--expunge] [--expunge1] [--expunge2] 
                [--subscribed] [--subscribe]
                [--nofoldersizes]
                [--dry]
@@ -72,8 +72,8 @@ DESCRIPTION
 
     You can decide to delete the messages from the source mailbox after a
     successful transfert (it is a good feature when migrating). In that
-    case, use the --delete option, and run imapsync again with the --expunge
-    option.
+    case, use the --delete option, and run imapsync again with the
+    --expunge1 option.
 
     You can also just synchronize a mailbox A from another mailbox B in case
     you just want to keep a "live" copy of B in A.
@@ -214,7 +214,7 @@ IMAP SERVERS
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
-    --expunge --maxage --maxsize --useheader
+    --expunge --expunge1 --expunge2 --maxage --maxsize --useheader
 
     If you have many mailboxes to migrate think about a little shell
     program. Write a file called file.csv (for example) containing users and
@@ -261,5 +261,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.139 2005/07/16 12:46:22 gilles Exp gilles $
+    $Id: imapsync,v 1.140 2005/10/30 10:16:52 gilles Exp $
 
