--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.142
+head: 1.143
 branch:
 locks: strict
-	gilles: 1.142
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 142;	selected revisions: 142
+total revisions: 143;	selected revisions: 143
 description:
 ----------------------------
-revision 1.142	locked by: gilles;
+revision 1.143
+date: 2005/11/27 20:36:12;  author: gilles;  state: Exp;  lines: +12 -10
+made --regextrans2 a multiple option
+----------------------------
+revision 1.142
 date: 2005/11/16 01:08:49;  author: gilles;  state: Exp;  lines: +7 -5
 Added expunge1 and expunge2 getoption code
 ----------------------------
