--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.142 $
+    $Revision: 1.143 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -35,7 +35,8 @@ SYNOPSIS
                [--noauthmd5]
                [--folder <string> --folder <string> ...]
                [--include <regex>] [--exclude <regex>]
-               [--prefix2 <string>] [--regextrans2 <regex>]
+               [--prefix2 <string>] 
+               [--regextrans2 <regex> --regextrans2 <regex> ...] 
                [--sep1 <char>]
                [--sep2 <char>]
                [--justfolders] [--justconnect]
@@ -261,5 +262,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.142 2005/11/16 01:08:49 gilles Exp gilles $
+    $Id: imapsync,v 1.143 2005/11/27 20:36:12 gilles Exp $
 
