--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,24 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.140
+head: 1.142
 branch:
 locks: strict
+	gilles: 1.142
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 140;	selected revisions: 140
+total revisions: 142;	selected revisions: 142
 description:
+----------------------------
+revision 1.142	locked by: gilles;
+date: 2005/11/16 01:08:49;  author: gilles;  state: Exp;  lines: +7 -5
+Added expunge1 and expunge2 getoption code
+----------------------------
+revision 1.141
+date: 2005/11/16 01:05:16;  author: gilles;  state: Exp;  lines: +6 -6
+fixed bug about subscribed folders. Was introduced
+by a line commented in 1.137
 ----------------------------
 revision 1.140
 date: 2005/10/30 10:16:52;  author: gilles;  state: Exp;  lines: +21 -8
