--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.8 2005/06/21 01:29:55 gilles Exp gilles $
+# $Id: INSTALL,v 1.9 2005/11/16 01:14:18 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -36,6 +36,8 @@ You need :
   To know the version you have on your system try :
   perl -mDigest::MD5 -e 'print $Digest::MD5::VERSION, "\n"'
   I use 2.20 (debian package)
+
+- Term::ReadKey
 
 - (Option) Perl Digest::HMAC_MD5 module
   Good for non plain text password over network.
