--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 TODO file for imapsync
 ----------------------
 
+Add an --exactsync option to remove target messages
+that are not on source.
+
 Read the IMAP RFC http://www.faqs.org/rfcs/rfc3501.html
 
 Respect the NAMESPACE behavior like the RFC.
