--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.143
+head: 1.144
 branch:
 locks: strict
+	gilles: 1.144
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 143;	selected revisions: 143
+total revisions: 144;	selected revisions: 144
 description:
+----------------------------
+revision 1.144	locked by: gilles;
+date: 2005/11/28 00:32:05;  author: gilles;  state: Exp;  lines: +60 -17
+Added RFC compliance about NAMESPACE prefixes.
+Added --prefix1 option.
 ----------------------------
 revision 1.143
 date: 2005/11/27 20:36:12;  author: gilles;  state: Exp;  lines: +12 -10
