--- a/TODO
+++ b/TODO
@@ -6,8 +6,6 @@ that are not on source.
 
 Read the IMAP RFC http://www.faqs.org/rfcs/rfc3501.html
 
-Respect the NAMESPACE behavior like the RFC.
-
 Add debian packaging in the Makefile.
 Write to the debian maintener about that.
 
@@ -33,16 +31,15 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 Look at http://freshmeat.net/projects/freshmeat-submit/
 Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
 
-
-
 Explain expunge behavior
 
 Add a --recurse option when --folder option is used.
 
-Add --prefix1 option. Don't know what is the need exactly.
+DONE. Add --prefix1 option. Don't know what is the need exactly.
+The need is to remove this prefix when building target folder names.
 
-
-
+DONE. Read the IMAP RFC http://www.rfc-editor.org/rfc/rfc2342.txt
+Respect the NAMESPACE behavior like the RFC.
 
 DONE. Add in doc: Does imapsync support IMAP over TLS (IMAPS)?
 
