--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,25 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.147
+head: 1.149
 branch:
 locks: strict
-	gilles: 1.147
+	gilles: 1.149
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 147;	selected revisions: 147
+total revisions: 149;	selected revisions: 149
 description:
 ----------------------------
-revision 1.147	locked by: gilles;
+revision 1.149	locked by: gilles;
+date: 2006/02/14 00:44:44;  author: gilles;  state: Exp;  lines: +9 -8
+Documented --exclude 'fold1|fold2|f3'
+----------------------------
+revision 1.148
+date: 2006/02/14 00:30:49;  author: gilles;  state: Exp;  lines: +7 -7
+More debug for dbmail pb.
+----------------------------
+revision 1.147
 date: 2006/02/08 07:54:46;  author: gilles;  state: Exp;  lines: +7 -9
 Just a little debug for Jim.
 ----------------------------
