--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.144
+head: 1.145
 branch:
 locks: strict
-	gilles: 1.144
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 144;	selected revisions: 144
+total revisions: 145;	selected revisions: 145
 description:
 ----------------------------
-revision 1.144	locked by: gilles;
+revision 1.145
+date: 2005/12/04 01:58:54;  author: gilles;  state: Exp;  lines: +54 -12
+Added --minage option
+----------------------------
+revision 1.144
 date: 2005/11/28 00:32:05;  author: gilles;  state: Exp;  lines: +60 -17
 Added RFC compliance about NAMESPACE prefixes.
 Added --prefix1 option.
