--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.144 $
+    $Revision: 1.145 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -46,6 +46,7 @@ SYNOPSIS
                [--regexmess <regex>] [--regexmess <regex>] 
                [--maxsize <int>]
                [--maxage <int>]
+               [--minage <int>]
                [--skipheader <regex>]
                [--useheader <string>] [--useheader <string>]
                [--skipsize]
@@ -215,7 +216,7 @@ IMAP SERVERS
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
-    --expunge --expunge1 --expunge2 --maxage --maxsize --useheader
+    --expunge --expunge1 --expunge2 --maxage --minage --maxsize --useheader
 
     If you have many mailboxes to migrate think about a little shell
     program. Write a file called file.csv (for example) containing users and
@@ -262,5 +263,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.144 2005/11/28 00:32:05 gilles Exp gilles $
+    $Id: imapsync,v 1.145 2005/12/04 01:58:54 gilles Exp $
 
