--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.145
+head: 1.147
 branch:
 locks: strict
+	gilles: 1.147
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 145;	selected revisions: 145
+total revisions: 147;	selected revisions: 147
 description:
+----------------------------
+revision 1.147	locked by: gilles;
+date: 2006/02/08 07:54:46;  author: gilles;  state: Exp;  lines: +7 -9
+Just a little debug for Jim.
+----------------------------
+revision 1.146
+date: 2006/01/13 02:43:18;  author: gilles;  state: Exp;  lines: +6 -6
+MDaemon
 ----------------------------
 revision 1.145
 date: 2005/12/04 01:58:54;  author: gilles;  state: Exp;  lines: +54 -12
