--- a/TODO
+++ b/TODO
@@ -1,6 +1,16 @@
 TODO file for imapsync
 ----------------------
 
+
+Create a imapsync mailing list.
+
+Add features from Herman (patch against 1.139)
+ - Support for authenticating as different (admin) user
+ - Support for different auth mechanisms (we needed PLAIN)
+
+
+Add my amazon wishlist link.
+
 Add an --exactsync option to remove target messages
 that are not on source.
 
