--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.145 $
+    $Revision: 1.147 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -188,7 +188,7 @@ IMAP SERVERS
      - Groupwise IMAP (Novell). Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003), 8.12
-     - MDaemon 7.0.1
+     - MDaemon 7.0.1, 8.1
      - MS Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
@@ -263,5 +263,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.145 2005/12/04 01:58:54 gilles Exp $
+    $Id: imapsync,v 1.147 2006/02/08 07:54:46 gilles Exp gilles $
 
