--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,29 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.149
+head: 1.152
 branch:
 locks: strict
-	gilles: 1.149
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 149;	selected revisions: 149
+total revisions: 152;	selected revisions: 152
 description:
 ----------------------------
-revision 1.149	locked by: gilles;
+revision 1.152
+date: 2006/02/17 02:57:21;  author: gilles;  state: Exp;  lines: +55 -18
+Made the --justconnect a real "just connect" connection,
+not a auth connection like it is now.
+----------------------------
+revision 1.151
+date: 2006/02/17 01:28:57;  author: gilles;  state: Exp;  lines: +9 -6
+Added documentation  about --regextrans2, dry mode.
+----------------------------
+revision 1.150
+date: 2006/02/16 05:23:05;  author: gilles;  state: Exp;  lines: +9 -7
+DBMail 2.0.7 failure story
+----------------------------
+revision 1.149
 date: 2006/02/14 00:44:44;  author: gilles;  state: Exp;  lines: +9 -8
 Documented --exclude 'fold1|fold2|f3'
 ----------------------------
