--- a/TODO
+++ b/TODO
@@ -2,6 +2,10 @@ TODO file for imapsync
 ----------------------
 
 
+
+
+Make --include --exclude options possibly be a list.
+
 Create a imapsync mailing list.
 
 Add features from Herman (patch against 1.139)
@@ -31,9 +35,6 @@ Talk about :
 (netscape or thunderbird is ok with dates)
 use the option --syncinternaldates "
 
-Add usage about --regextrans2
-To remove INBOX. in the name of destination folders :
---regextrans2 's/^INBOX\.(.+)/$1/'
 
 Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
@@ -44,6 +45,15 @@ Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
 Explain expunge behavior
 
 Add a --recurse option when --folder option is used.
+
+DONE. Add usage about --regextrans2
+To remove INBOX. in the name of destination folders:
+--regextrans2 's/^INBOX\.(.+)/$1/'
+To sync a complete account in a subfolder called FOO:
+--regextrans2 's/^INBOX(.*)/INBOX.FOO$1/'
+
+DONE. Make the --justconnect a real "just connect" connection,
+not a auth connection like it is now.
 
 DONE. Add --prefix1 option. Don't know what is the need exactly.
 The need is to remove this prefix when building target folder names.
