--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.149 $
+    $Revision: 1.152 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -36,21 +36,21 @@ SYNOPSIS
                [--folder <string> --folder <string> ...]
                [--include <regex>] [--exclude <regex>]
                [--prefix2 <string>] [--prefix1 <string>] 
-               [--regextrans2 <regex> --regextrans2 <regex> ...] 
+               [--regextrans2 <regex> --regextrans2 <regex> ...]
                [--sep1 <char>]
                [--sep2 <char>]
-               [--justfolders] [--justconnect]
+               [--justfolders] [--justfoldersizes] [--justconnect]
                [--syncinternaldates]
                [--buffersize  <int>]
                [--syncacls]
-               [--regexmess <regex>] [--regexmess <regex>] 
+               [--regexmess <regex>] [--regexmess <regex>]
                [--maxsize <int>]
                [--maxage <int>]
                [--minage <int>]
                [--skipheader <regex>]
                [--useheader <string>] [--useheader <string>]
                [--skipsize]
-               [--delete] [--expunge] [--expunge1] [--expunge2] 
+               [--delete] [--expunge] [--expunge1] [--expunge2]
                [--subscribed] [--subscribe]
                [--nofoldersizes]
                [--dry]
@@ -167,9 +167,11 @@ BUGS
     Report any bugs to the author: lamiral@linux-france.org
 
 IMAP SERVERS
-    Failure story reported with the following imap server :
+    Failure stories reported with the following imap servers :
 
-    - MailEnable 1.54 (Proprietary) http://www.mailenable.com/
+     - MailEnable 1.54 (Proprietary) http://www.mailenable.com/
+     - DBMail 2.0.7 (GPL). But DBMail 1.2.1 works.
+       Patient and confident testers are welcome.
 
     Success stories reported with the following imap servers (softwares
     names are in alphabetic order) :
@@ -182,7 +184,7 @@ IMAP SERVERS
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
        2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved)
        (http://asg.web.cmu.edu/cyrus/)
-     - DBMail 1.2.1 (GPL) (http://www.dbmail.org/)
+     - DBMail 1.2.1 (GPL) (http://www.dbmail.org/). 2.0.7 seems buggy.
      - Dovecot 0.99.10.4  0.99.14 (LGPL) (http://www.dovecot.org/)
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
      - Groupwise IMAP (Novell). Buggy so see the FAQ.
@@ -210,7 +212,9 @@ IMAP SERVERS
      From software :* OK louloutte Cyrus IMAP4 v1.5.19 server ready
      To   software :* OK Courier-IMAP ready
 
-    You can use option --justconnect to get those lines.
+    You can use option --justconnect to get those lines. Example :
+
+      imapsync --host1 imap.troc.org --host2 imap.trac.org --justconnect
 
     And please rate imapsync at http://freshmeat.net/projects/imapsync/
 
@@ -263,5 +267,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.149 2006/02/14 00:44:44 gilles Exp gilles $
+    $Id: imapsync,v 1.152 2006/02/17 02:57:21 gilles Exp $
 
